# ShaderMake

./: .gitignore  CMakeLists.txt  README.md  gen-windows.bat  premake5.lua
Sample/: CMakeLists.txt  Sample.lua
Sample/resources/shaders/: default.vertex.hlsl  default_2d.pixel.hlsl  default_2d.vertex.hlsl  imgui.vertex.hlsl
Sample/src/: Sample.cpp
ShaderCompiler/: CMakeLists.txt
ShaderCompiler/src/: ShaderCompiler.cpp
ShaderMake/: CMakeLists.txt  ShaderMake.lua
ShaderMake/include/ShaderMake/: Compiler.h  Context.h  ShaderBlob.h  ShaderMake.h  Timer.h
ShaderMake/src/: Compiler.cpp  Context.cpp  ShaderBlob.cpp  ShaderMake.cpp
include/ShaderMake/: ShaderBlob.h
resources/shaders/: Shader.cfg  compile.bat  default.pixel.hlsl  default.vertex.hlsl  default_2d.pixel.hlsl  pixel.hlsl  test.pixel.hlsl  test.vertex.hlsl  vertex.hlsl
src/: ShaderBlob.cpp  ShaderMake.cpp
